<resources>
    <string name="app_name">Fuzz</string>
    <string name="login_btn">Login</string>
    <string name="username_txt">Username</string>
    <string name="password_txt">Password</string>
    <string name="avatar_desc">avatar</string>
    <string name="version_info">version 0.1 Made with ❤ by jaywhen</string>
    <string name="title_activity_life_cycle">LifeCycleActivity</string>
    <string name="life_cycle_btn">Quit App</string>
    <string name="life_cycle_txt">Hello</string>
</resources>